# mangadex-downloader-2

./: .gitignore  Cargo.toml  README.md
src/: api.rs  chapter.rs  coverart.rs  image.rs  main.rs  manga.rs  metadata.rs  range.rs  ratelimits.rs  requester.rs  types.rs  utils.rs
