[package]
name = "mangadex-downloader"
authors = [ "UnicodingUnicorn" ]
description = "A CLI tool to download manga from https://mangadex.org"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.2", features = [ "derive" ] }
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.16"
mime_guess = "2.0.4"
pbr = "1.0.4"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = [ "json" ] }
serde = { version = "1.0.117", features = [ "derive" ] }
serde_json = "1.0.91"
sha2 = "0.10.6"
simplelog = "0.12.0"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = [ "macros", "rt-multi-thread" ] }
